packages/bootstrap/scss/checkbox/_variables.scss
// Checkbox

$checkbox-size: map-get( $spacing, 4 ) !default;
$checkbox-radius: map-get( $spacing, 1 ) !default;
/// Border width of checkbox.
/// @group checkbox
$checkbox-border-width: 1px !default;

/// Background color of checkbox.
/// @group checkbox
$checkbox-bg: $component-bg !default;
/// Color of checkbox.
/// @group checkbox
$checkbox-text: null !default;
/// Border color of checkbox.
/// @group checkbox
$checkbox-border: contrast-wcag( $input-bg, $gray-400, $gray-600 ) !default;

/// Background color of hovered checkbox.
/// @group checkbox
$checkbox-hovered-bg: null !default;
/// Color of hovered checkbox.
/// @group checkbox
$checkbox-hovered-text: null !default;
/// Border color of hovered checkbox.
/// @group checkbox
$checkbox-hovered-border: null !default;

/// Background color of checked checkbox.
/// @group checkbox
$checkbox-checked-bg: $primary !default;
/// Color of checked checkbox.
/// @group checkbox
$checkbox-checked-text: contrast-wcag( $checkbox-checked-bg ) !default;
/// Border color of checked checkbox.
/// @group checkbox
$checkbox-checked-border: $checkbox-checked-bg !default;

/// Background color of indeterminate checkbox.
/// @group checkbox
$checkbox-indeterminate-bg: $checkbox-checked-bg !default;
/// Color of indeterminate checkbox.
/// @group checkbox
$checkbox-indeterminate-text: $checkbox-checked-text !default;
/// Border color of indeterminate checkbox.
/// @group checkbox
$checkbox-indeterminate-border: $checkbox-checked-border !default;

/// Border color of focused checkbox.
/// @group checkbox
$checkbox-focused-border: try-tint( $primary, 50% ) !default;
/// Box shadow of focused checkbox.
/// @group checkbox
$checkbox-focused-shadow: 0 0 0 .25rem rgba( $primary, .25 ) !default;
/// Border color of focused and checked checkbox.
/// @group checkbox
$checkbox-focused-checked-border: $checkbox-checked-border !default;
/// Box shadow of focused and checked checkbox.
/// @group checkbox
$checkbox-focused-checked-shadow: $checkbox-focused-shadow !default;

/// Background color of disabled checkbox.
/// @group checkbox
$checkbox-disabled-bg: null !default;
/// Color of disabled checkbox.
/// @group checkbox
$checkbox-disabled-text: null !default;
/// Border color of disabled checkbox.
/// @group checkbox
$checkbox-disabled-border: null !default;

/// Background color of disabled and checked checkbox.
/// @group checkbox
$checkbox-disabled-checked-bg: null !default;
/// Color of disabled and checked checkbox.
/// @group checkbox
$checkbox-disabled-checked-text: null !default;
/// Border color of disabled and checked checkbox.
/// @group checkbox
$checkbox-disabled-checked-border: null !default;

/// Background color of invalid checkbox.
/// @group checkbox
$checkbox-invalid-bg: null !default;
/// Color of invalid checkbox.
/// @group checkbox
$checkbox-invalid-text: $invalid-text !default;
/// Border color of invalid checkbox.
/// @group checkbox
$checkbox-invalid-border: $invalid-border !default;


// Checkbox indicator

/// Type of checkbox indicator.
/// @group checkbox
$checkbox-indicator-type: image !default;

/// Glyph font family of checkbox indicator.
/// @group checkbox
$checkbox-glyph-font-family: "WebComponentsIcons", monospace !default;
$checkbox-glyph-size: $checkbox-size !default;
/// Glyph of checkbox indicator.
/// @group checkbox
$checkbox-checked-glyph: "\e118" !default;
/// Glyph of indeterminate checkbox indicator.
/// @group checkbox
$checkbox-indeterminate-glyph: "\e121" !default;

/// Image of checked checkbox indicator.
/// @group checkbox
$checkbox-checked-image: escape-svg( url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$checkbox-checked-text}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/></svg>") ) !default;
/// Image of checked checkbox indicator.
/// @group checkbox
$checkbox-indeterminate-image: escape-svg( url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'><path fill='none' stroke='#{$checkbox-indeterminate-text}' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/></svg>") ) !default;


// Checkbox label
$checkbox-label-margin-x: map-get( $spacing, 1 ) !default;


// Checkbox list

/// Spacing between items of horizontal checkbox list.
/// @group checkbox
$checkbox-list-spacing: map-get( $spacing, 4 ) !default;
/// Horizontal padding of checkbox list items.
/// @group checkbox
$checkbox-list-item-padding-x: 0px !default;
/// Vertical padding of checkbox list items.
/// @group checkbox
$checkbox-list-item-padding-y: $list-item-padding-y !default;


// Checkbox ripple
$checkbox-ripple-size: $checkbox-size * 3 !default;
/// Background color of checkbox ripple.
/// @group checkbox
$checkbox-ripple-bg: $checkbox-checked-bg !default;
/// Opacity of checkbox ripple.
/// @group checkbox
$checkbox-ripple-opacity: .25 !default;

